--- a/Multiplcation table/Input-dan.html
+++ b/Multiplcation table/Input-dan.html
@@ -4,33 +4,84 @@
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <title>좋아요</title>
+    <style>
+        :root {
+            --bgc: #35394A;
+        }
+        * {
+            margin: 0; padding: 0;
+        }
+        #root {
+            position: relative;
+            width: 100%;
+            height: 500px;
+        }
+        form,h2 {
+            position: relative;
+            left: 45%; top: 55%;
+        }
+        #inputNum {
+            margin-top: 20px;
+            background: var(--bgc);
+            width: 150px;
+            height: 30px;
+            color: #fff;
+            border-radius: 30px;
+            padding: 0 10px;
+            outline: none
+        }
+
+        button {
+            border-radius: 30px;
+            width: 50px;
+            height: 30px;
+            outline: none;
+        }
+
+        #result {
+            position: relative;
+            left: 20%;
+            top: 20%;
+        }
+
+        p {
+            line-height: 30px;
+        }
+    </style>
 </head>
 <body>
 <div id="root">
-    <div>{{first}}곱하기 {{second}}는?</div>
+    <h2>구구단 입력란</h2>
     <form v-on:submit="onSubmitForm">
-        <input type="number" v-model="value">
+        <div>몇 단을 입력할까요?</div>
+        <input type="number" id="inputNum" v-model="value">
         <button type="submit">입력</button>
     </form>
-    <div id="result">{{result}}</div>
+    <div id="result" v-for="(num, id) in list" :key="key">
+        <div class="inputDan">입력하신 단은 {{num.num}}단입니다.</div>
+        <div v-for="key in 9" :key="key">
+            <p>{{num.num}} x {{key}} = {{num.num * key}} </p>
+        </div>
+    </div>
 </div>
 <script>
     const app = new Vue({
         el: '#root',
         data: {
-            first: Math.ceil(Math.random() * 9) ,
-            second: Math.ceil(Math.random() * 9),
-            value: '',
-            result: '',
+            value: null,
+            list: [],
+            result: ''
         },
         methods: {
             onSubmitForm(e) {
                 e.preventDefault();
-                if(this.first * this.second === parseInt(this.value)) {
-                    this.result = "정답";
-                } else {
-                    this.result = "땡";
+                this.list = [];
+                let num = parseInt(this.value) // 정수형으로 바꿔준다.
+                if(Number.isNaN(num)) {
+                    alert("아무것도 입력하지 않았습니다.");
+                    return;
                 }
+                this.list.unshift({num:num})
             }
         },
     }) //Vue의 app 인스턴스
